<resources>
    <string name="app_name">SelectCoursesFinal</string>
    <string name="confirm">Confirm</string>
    <string name="advanced">More</string>
    <string name="add">+</string>

    <string name="CourseLoad">Course Load:</string>
    <string name="CourseLoadNum">5</string>
    <string name="CourseCode">Course Code</string>
    <string name="Mandatory">Mandatory</string>
    <string name="editTextHint">SelectACourse</string>

    <string name="Timeslot">Timeslot</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thur</string>
    <string name="Friday">Fri</string>
</resources>
